spacing responsiveness fix
fix for the bottom half of the page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
           <div class="item2">
             <h3>CEO</h3>
-              <p>The driving force and heart of SDA, our mission is to bring the pain and bring the love to you. These descriptions cannot be too long and I may change these boxes if this doesnt work out</p>
+              <p>The driving force and heart of SDA, our mission is to bring the funk and bring the love to you. These descriptions cannot be too long and I may change these boxes if this doesnt work out</p>
 
           </div>
           <div class="item3">
