--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@
           <li><a href="SDAside.html"><i class="fa fa-info site-nav--icon"></i>About Us</a></li>
           <li><a href="#"><i class="fa fa-pencil site-nav--icon"></i>Services</a></li>
           <li><a href="#"><i class="fa fa-usd site-nav--icon"></i>Client Spotlight</a></li>
-          <li><a href="#"><i class="fa fa-envelope site-nav--icon"></i>Contact</a></li>
+          <li><a href="services-espanol.html"><i class="fa fa-envelope site-nav--icon"></i>Español</a></li>
         </ul>
 
       </nav> 
@@ -277,7 +277,7 @@ margin-top: 10px;"
       555-324-4484
     </li>
     <li>
-      SDA@yupyup.com
+     
     </li>
     <li>
       7400 Beaufont Spring dr. 
